// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navRight renders 0 1`] = `
Array [
  .c0 {
  -webkit-nav-right: 0;
  -moz-nav-right: 0;
  -ms-nav-right: 0;
  nav-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: 0;
  -moz-nav-right: 0;
  -ms-nav-right: 0;
  nav-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: 0;
  -moz-nav-right: 0;
  -ms-nav-right: 0;
  nav-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: 0;
  -moz-nav-right: 0;
  -ms-nav-right: 0;
  nav-right: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`navRight renders function 1`] = `
Array [
  .c0 {
  -webkit-nav-right: hasnot;
  -moz-nav-right: hasnot;
  -ms-nav-right: hasnot;
  nav-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: has;
  -moz-nav-right: has;
  -ms-nav-right: has;
  nav-right: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: hasnot;
  -moz-nav-right: hasnot;
  -ms-nav-right: hasnot;
  nav-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: has;
  -moz-nav-right: has;
  -ms-nav-right: has;
  nav-right: has;
}

<div
    className="c0"
  />,
]
`;

exports[`navRight renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-nav-right: invalid.path.1;
  -moz-nav-right: invalid.path.1;
  -ms-nav-right: invalid.path.1;
  nav-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: invalid.path.1;
  -moz-nav-right: invalid.path.1;
  -ms-nav-right: invalid.path.1;
  nav-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: invalid.path.1;
  -moz-nav-right: invalid.path.1;
  -ms-nav-right: invalid.path.1;
  nav-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: invalid.path.1;
  -moz-nav-right: invalid.path.1;
  -ms-nav-right: invalid.path.1;
  nav-right: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`navRight renders negative number 1`] = `
Array [
  .c0 {
  -webkit-nav-right: -54881;
  -moz-nav-right: -54881;
  -ms-nav-right: -54881;
  nav-right: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: -54881;
  -moz-nav-right: -54881;
  -ms-nav-right: -54881;
  nav-right: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: -42365;
  -moz-nav-right: -42365;
  -ms-nav-right: -42365;
  nav-right: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: -42365;
  -moz-nav-right: -42365;
  -ms-nav-right: -42365;
  nav-right: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`navRight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: July;
    -moz-nav-right: July;
    -ms-nav-right: July;
    nav-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: August;
    -moz-nav-right: August;
    -ms-nav-right: August;
    nav-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: September;
    -moz-nav-right: September;
    -ms-nav-right: September;
    nav-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-right: November;
    -moz-nav-right: November;
    -ms-nav-right: November;
    nav-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: July;
    -moz-nav-right: July;
    -ms-nav-right: July;
    nav-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: August;
    -moz-nav-right: August;
    -ms-nav-right: August;
    nav-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: September;
    -moz-nav-right: September;
    -ms-nav-right: September;
    nav-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-right: November;
    -moz-nav-right: November;
    -ms-nav-right: November;
    nav-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: May;
    -moz-nav-right: May;
    -ms-nav-right: May;
    nav-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: June;
    -moz-nav-right: June;
    -ms-nav-right: June;
    nav-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: April;
    -moz-nav-right: April;
    -ms-nav-right: April;
    nav-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-right: November;
    -moz-nav-right: November;
    -ms-nav-right: November;
    nav-right: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: May;
    -moz-nav-right: May;
    -ms-nav-right: May;
    nav-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: June;
    -moz-nav-right: June;
    -ms-nav-right: June;
    nav-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-right: April;
    -moz-nav-right: April;
    -ms-nav-right: April;
    nav-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-right: November;
    -moz-nav-right: November;
    -ms-nav-right: November;
    nav-right: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`navRight renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-nav-right: July;
    -moz-nav-right: July;
    -ms-nav-right: July;
    nav-right: July;
  }
}

@media April {
  .c0 {
    -webkit-nav-right: August;
    -moz-nav-right: August;
    -ms-nav-right: August;
    nav-right: August;
  }
}

@media January {
  .c0 {
    -webkit-nav-right: September;
    -moz-nav-right: September;
    -ms-nav-right: September;
    nav-right: September;
  }
}

@media April {
  .c0 {
    -webkit-nav-right: November;
    -moz-nav-right: November;
    -ms-nav-right: November;
    nav-right: November;
  }
}

@media June {
  .c0 {
    -webkit-nav-right: August;
    -moz-nav-right: August;
    -ms-nav-right: August;
    nav-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-nav-right: July;
    -moz-nav-right: July;
    -ms-nav-right: July;
    nav-right: July;
  }
}

@media April {
  .c0 {
    -webkit-nav-right: August;
    -moz-nav-right: August;
    -ms-nav-right: August;
    nav-right: August;
  }
}

@media January {
  .c0 {
    -webkit-nav-right: September;
    -moz-nav-right: September;
    -ms-nav-right: September;
    nav-right: September;
  }
}

@media April {
  .c0 {
    -webkit-nav-right: November;
    -moz-nav-right: November;
    -ms-nav-right: November;
    nav-right: November;
  }
}

@media June {
  .c0 {
    -webkit-nav-right: August;
    -moz-nav-right: August;
    -ms-nav-right: August;
    nav-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-nav-right: January;
    -moz-nav-right: January;
    -ms-nav-right: January;
    nav-right: January;
  }
}

@media April {
  .c0 {
    -webkit-nav-right: December;
    -moz-nav-right: December;
    -ms-nav-right: December;
    nav-right: December;
  }
}

@media January {
  .c0 {
    -webkit-nav-right: April;
    -moz-nav-right: April;
    -ms-nav-right: April;
    nav-right: April;
  }
}

@media April {
  .c0 {
    -webkit-nav-right: May;
    -moz-nav-right: May;
    -ms-nav-right: May;
    nav-right: May;
  }
}

@media June {
  .c0 {
    -webkit-nav-right: June;
    -moz-nav-right: June;
    -ms-nav-right: June;
    nav-right: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-nav-right: January;
    -moz-nav-right: January;
    -ms-nav-right: January;
    nav-right: January;
  }
}

@media April {
  .c0 {
    -webkit-nav-right: December;
    -moz-nav-right: December;
    -ms-nav-right: December;
    nav-right: December;
  }
}

@media January {
  .c0 {
    -webkit-nav-right: April;
    -moz-nav-right: April;
    -ms-nav-right: April;
    nav-right: April;
  }
}

@media April {
  .c0 {
    -webkit-nav-right: May;
    -moz-nav-right: May;
    -ms-nav-right: May;
    nav-right: May;
  }
}

@media June {
  .c0 {
    -webkit-nav-right: June;
    -moz-nav-right: June;
    -ms-nav-right: June;
    nav-right: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`navRight renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-nav-right: 54881;
  -moz-nav-right: 54881;
  -ms-nav-right: 54881;
  nav-right: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: 54881;
  -moz-nav-right: 54881;
  -ms-nav-right: 54881;
  nav-right: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: 42365;
  -moz-nav-right: 42365;
  -ms-nav-right: 42365;
  nav-right: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: 42365;
  -moz-nav-right: 42365;
  -ms-nav-right: 42365;
  nav-right: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`navRight renders string 1`] = `
Array [
  .c0 {
  -webkit-nav-right: July;
  -moz-nav-right: July;
  -ms-nav-right: July;
  nav-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: July;
  -moz-nav-right: July;
  -ms-nav-right: July;
  nav-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: June;
  -moz-nav-right: June;
  -ms-nav-right: June;
  nav-right: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: June;
  -moz-nav-right: June;
  -ms-nav-right: June;
  nav-right: June;
}

<div
    className="c0"
  />,
]
`;

exports[`navRight renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-nav-right: DarkSlateBlue;
  -moz-nav-right: DarkSlateBlue;
  -ms-nav-right: DarkSlateBlue;
  nav-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: DarkSlateBlue;
  -moz-nav-right: DarkSlateBlue;
  -ms-nav-right: DarkSlateBlue;
  nav-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: DarkSlateBlue;
  -moz-nav-right: DarkSlateBlue;
  -ms-nav-right: DarkSlateBlue;
  nav-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-right: DarkSlateBlue;
  -moz-nav-right: DarkSlateBlue;
  -ms-nav-right: DarkSlateBlue;
  nav-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
